--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -1,8 +1,12 @@
+body {
+	background-image: url("../img/background14.jpg" );
+	background-size: 100% 100%;
+}
 #header {
 	height: 70px;
 	width: 1000px;
 	padding: 5px;
-	Background-color: #6699CC;
+	background-color: rgba(102, 153, 204, 0.8);
 	text-align: center;
 	color: white;
 }
@@ -26,6 +30,21 @@
 	width: 350px;
 	float: left;
 }
+#right {
+	background-color: rgb(135,10,8);
+}
+#left {
+	background-color: rgb(222,148,41);
+}
+#x {
+	background-color: rgb(96,127,15);
+}
+#y {
+	background-color: rgb(104,153,199);
+}
+#repeat {
+	background-color: rgb(62,69,127);
+}
 #source {
 	height: 320px;
 	width: 300px;
@@ -45,7 +64,6 @@
     font-size: 0.8em;
     color:white;
     width: 145px;
-    background-color:#4679bd;
     text-align:center;
  }
  
@@ -55,7 +73,7 @@
     padding: 3px 3px;
     font-size: 0.8em;
     color:white;
-    width: 180px;
+    width: 170px;
     background-color:#4679bd;
     text-align:center;
  }
@@ -70,7 +88,7 @@
  	cursor: pointer;
 }
 #sortable {
-   width:180px;
+   width:300px;
    height:110px;
    overflow:auto;
    list-style-type: none;
@@ -80,11 +98,24 @@
 #draggable {
 	list-style-type: none;
 }
-div {
+
+#Main-Panel{
+	margin-top: 0px;
+}
+
+/* div {
 	border: none;
     border-radius: 25px;
+    background-color: rgba(190, 190, 190, 0.5);
     margin: 5px;
-} 
+}  */
+
+.transparent{
+	border: none;
+    border-radius: 25px;
+    background-color: rgba(190, 190, 190, 0.5);
+    margin: 5px;
+}
 p {
 	color: white;
 }
@@ -94,5 +125,5 @@ th {
 }
 button {
 	border: none;
-	background-color: lightGrey;
+	background-color: rgba(190, 190, 190, 0.5);
 }
