--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -16,18 +16,24 @@ body {
 	float: left;
 }
 #editor {
-	height: 340px;
-	width: 440px;
+	height: 400px;
+	width: 400px;
 	float: left;
 }
 #player {
 	height: 400px;
-	width: 650px;
+	width: 1000px;
 	float: left;
 }
 #storage{
 	height: 400px;
-	width: 350px;
+	width: 150px;
+	float: left;
+}
+#source {
+	height: 320px;
+	width: 250px;
+	padding: 5px;
 	float: left;
 }
 #right {
@@ -45,12 +51,7 @@ body {
 #repeat {
 	background-color: rgb(62,69,127);
 }
-#source {
-	height: 320px;
-	width: 300px;
-	padding: 5px;
-	float: left;
-}
+
 #divName {
 	border-radius: 10px;
 	border: none;
@@ -126,4 +127,10 @@ th {
 button {
 	border: none;
 	background-color: rgba(190, 190, 190, 0.5);
+}
+
+.content-div{
+    border-radius: 10px;
+	border: none;
+	float: top;
 }
