--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -147,3 +147,8 @@ button {
 	float: left; 
 	border: dotted
 }
+.form-control-inline {
+    min-width: 0;
+    width: 100;
+    display: inline;
+}
