--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -29,13 +29,13 @@ body {
 	float: left;
 }
 #editor {
-	height: 440px;
-	width: 50%;
+	height: 643px; 
+	width: 26%;
 	float: left;
 }
 
 #player {
-	width: 100%;
+	width: 46%;
 	float: left;
 }
 #storage{
@@ -225,7 +225,7 @@ button {
 	width:45%;
 }
 .tab-panel{
-	width: 30%;
+	width: 20%;
 	height: 400px;
     float: left;
 }
@@ -239,7 +239,7 @@ button {
 	width:90%;
 	margin: 2rem;
 	overflow: scroll; 
-	height: 300px; 
+	height: 570px; 
 	float: left; 
 	border: dotted
 }
@@ -247,6 +247,13 @@ button {
 	height:auto;
 	width:auto;
 }
+
+.inner-tab>li>a {
+position: relative;
+display: block;
+padding: 2px 2px;
+}
+
 .select-pane{
 	width:100%;
 }
@@ -270,4 +277,18 @@ button {
 	width:90%;
 	margin: 2rem;
 	
+}
+
+.btn-primary-customize{
+	 display:block;
+  max-width: 14rem;
+  margin: 1.5rem 1.5rem auto;
+  padding: 1rem; 
+  border-radius: 2px;
+  font-size: 1.5rem; 
+  font-family: 'Oxygen', sans-serif;
+  text-align: center; 
+  text-decoration: none;
+  transition: all 200ms linear; 
+  float:left;
 }
