--- a/WebContent/resources/CSS/overlay.css
+++ b/WebContent/resources/CSS/overlay.css
@@ -43,17 +43,18 @@ body {
 }
 .overlay-trigger {
   display:block;
-  /* max-width: 14rem;
-  margin: 0.5rem 2.5rem auto;
-  padding: 2rem; */
-  /* background: #F0787C; */
-  /* border-radius: 2px;
+  max-width: 14rem;
+  margin: 1.5rem 1.5rem auto;
+  padding: 1rem; 
+  background: #F0787C; 
+  border-radius: 2px;
   color: #FFF;
-  font-size: 1.5rem; */
+  font-size: 1.5rem; 
   font-family: 'Oxygen', sans-serif;
-  /* text-align: center; */
+  text-align: center; 
   text-decoration: none;
   transition: all 200ms linear; 
+  float:left;
 }
 .overlay-trigger:hover {
   /* background: #eb4a4f; */
