--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -322,3 +322,18 @@ padding: 2px 2px;
     background-color: rgba(190, 190, 190, 0.83);
     margin-top:5px;
 }
+
+.variable-list {
+	list-style-type: none;
+}
+
+.variable-list li
+{
+    border-radius: 10px;
+    margin: 3px 3px 3px 3px;
+    padding: 3px 3px;
+    font-size: 0.8em;
+    color:white;
+    width: 145px;
+    text-align:center;
+}
