--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -341,3 +341,8 @@ padding: 2px 2px;
     width: 145px;
     text-align:center;
 }
+.tab-editor-panel{
+	width:30%;
+	height: 549px;
+    float: left;
+}
