--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -136,6 +136,17 @@ body {
     width: 145px;
     text-align:center;
 }
+
+#music li
+{
+    border-radius: 10px;
+    margin: 3px 3px 3px 3px;
+    padding: 3px 3px;
+    font-size: 0.8em;
+    color:white;
+    width: 145px;
+    text-align:center;
+}
     
 #notdraggable li
 {
