Debug with color of music

--- a/WebContent/resources/CSS/content.css
+++ b/WebContent/resources/CSS/content.css
@@ -182,7 +182,7 @@ body {
     font-size: 0.8em;
     color:white;
     width: 145px;
-    background-color:#4679bd;
+    /* background-color:#4679bd; */
     text-align:center;
  }
  
